# uvtest

./: README.md  install.sh  pyproject.toml
src/myapp/: __init__.py
